--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -47,6 +47,10 @@
 			<artifactId>openmrs-web</artifactId>
 			<type>jar</type>
 		</dependency>
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>legacyui-omod</artifactId>
+		</dependency>
 		
 		<dependency>
 			<groupId>org.openmrs.api</groupId>
